--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>Hello, this is Nkululeko Fakude</h1>
 
     <div>Here i am learning about creating first repository on my GitHub</div>
+
+    <h1>Hello, today i am learning about git clone and update some few codes and push it back to my gitHub</h1>
 </body>
 </html>
